feat: shift swap modal with employee dropdown
- Replace window.prompt() with proper modal UI
- Employee dropdown filters out current employee and inactive employees
- Shows shift details (date, time, role, location)
- Optional reason textarea with validation
- Mobile responsive design
- Spanish + English translations
- Add missing translation keys: shiftDetails, time, noEmployeesAvailable, optional, submitting

Deployed: index-BtD1tuyQ.js

--- a/apps/web/src/locales/en/translation.json
+++ b/apps/web/src/locales/en/translation.json
@@ -17,7 +17,9 @@
     "actions": "Actions",
     "filter": "Filter",
     "export": "Export",
-    "import": "Import"
+    "import": "Import",
+    "optional": "optional",
+    "submitting": "Submitting..."
   },
   "auth": {
     "login": "Login",
@@ -108,6 +110,15 @@
     "testSuccess": "✅ SMTP connection successful",
     "testFailed": "❌ SMTP connection error",
     "saveSuccess": "✅ Settings saved successfully",
+    "locationsManagement": "Locations Management",
+    "locationsDescription": "Define locations for your business. These will be available when creating schedules.",
+    "addLocation": "Add Location",
+    "locationName": "Location name",
+    "locationPlaceholder": "E.g: Kitchen, Bar, Terrace",
+    "noLocations": "No locations configured yet",
+    "deleteLocation": "Delete",
+    "locationAdded": "✅ Location added successfully",
+    "locationDeleted": "✅ Location removed successfully",
     "saveFailed": "❌ Error saving settings",
     "autoDetectedMode": "Auto-detected mode",
     "sslMode": "SSL (Port 465)",
@@ -141,5 +152,89 @@
     "confirmDelete": "Are you sure you want to delete this record?",
     "noDataAvailable": "No data available",
     "loadingData": "Loading data..."
+  },
+  "schedule": {
+    "title": "Shift Scheduling",
+    "weekOf": "Week of",
+    "employee": "Employee",
+    "unassigned": "Unassigned",
+    "conflicts": "conflicts",
+    "hasConflict": "Has conflict",
+    "noSchedule": "No schedule for this week",
+    "createSchedulePrompt": "Create a new schedule to start planning shifts.",
+    "createSchedule": "Create Schedule",
+    "copyWeek": "Copy Week",
+    "print": "Print Schedule",
+    "publish": "Publish",
+    "unpublish": "Unpublish",
+    "lock": "Lock",
+    "unlock": "Unlock",
+    "resolveConflictsFirst": "Resolve conflicts before publishing",
+    "unlockReasonPrompt": "Enter the reason to unlock the schedule:",
+    "status": {
+      "draft": "Draft",
+      "published": "Published",
+      "locked": "Locked"
+    },
+    "createShift": "Create Shift",
+    "editShift": "Edit Shift",
+    "confirmDeleteShift": "Are you sure you want to delete this shift?",
+    "conflictsDetected": "Conflicts detected",
+    "date": "Date",
+    "startTime": "Start Time",
+    "endTime": "End Time",
+    "breakMinutes": "Break (min)",
+    "role": "Role",
+    "selectRole": "Select role",
+    "assignEmployee": "Assign employee",
+    "location": "Location",
+    "allLocations": "All locations",
+    "locationPlaceholder": "E.g: Kitchen, Bar, Terrace",
+    "color": "Color",
+    "notes": "Notes",
+    "notesPlaceholder": "Additional notes about the shift...",
+    "tapToAdd": "Tap to add shift",
+    "loadError": "Error loading schedule",
+    "createError": "Error creating schedule",
+    "publishError": "Error publishing schedule",
+    "unpublishError": "Error unpublishing schedule",
+    "lockError": "Error locking schedule",
+    "unlockError": "Error unlocking schedule",
+    "copyError": "Error copying schedule",
+    "copyShift": "Copy Shift",
+    "cutShift": "Cut Shift",
+    "pasteShift": "Paste Shift",
+    "deleteShift": "Delete Shift",
+    "shiftCopied": "Shift copied to clipboard",
+    "shiftCut": "Shift cut to clipboard",
+    "shiftPasted": "Shift pasted successfully",
+    "shiftDeleted": "Shift deleted successfully",
+    "pasteError": "Error pasting shift",
+    "deleteError": "Error deleting shift",
+    "pasteHere": "Click to paste",
+    "requestSwap": "Request Swap",
+    "swapWith": "Swap with",
+    "selectEmployee": "Select employee",
+    "swapReason": "Reason for swap (optional)",
+    "swapReasonPlaceholder": "Why do you need to swap this shift?",
+    "targetShift": "Target shift (optional)",
+    "createSwapRequest": "Create Swap Request",
+    "swapRequests": "Swap Requests",
+    "pending": "Pending",
+    "approved": "Approved",
+    "rejected": "Rejected",
+    "cancelled": "Cancelled",
+    "approveSwap": "Approve Swap",
+    "rejectSwap": "Reject Swap",
+    "cancelSwap": "Cancel Request",
+    "rejectionReason": "Reason for rejection",
+    "swapRequestCreated": "Swap request created successfully",
+    "swapRequestApproved": "Swap request approved",
+    "swapRequestRejected": "Swap request rejected",
+    "swapRequestCancelled": "Swap request cancelled",
+    "swapError": "Error processing swap request",
+    "shiftDetails": "Shift Details",
+    "time": "Time",
+    "noEmployeesAvailable": "No employees available for swap"
   }
 }
