--- a/apps/web/src/locales/es/translation.json
+++ b/apps/web/src/locales/es/translation.json
@@ -17,7 +17,9 @@
     "actions": "Acciones",
     "filter": "Filtrar",
     "export": "Exportar",
-    "import": "Importar"
+    "import": "Importar",
+    "optional": "opcional",
+    "submitting": "Enviando..."
   },
   "auth": {
     "login": "Iniciar Sesión",
@@ -108,6 +110,15 @@
     "testSuccess": "✅ Conexión SMTP exitosa",
     "testFailed": "❌ Error de conexión SMTP",
     "saveSuccess": "✅ Configuración guardada exitosamente",
+    "locationsManagement": "Gestión de Ubicaciones",
+    "locationsDescription": "Define las ubicaciones de tu negocio. Estarán disponibles al crear horarios.",
+    "addLocation": "Añadir Ubicación",
+    "locationName": "Nombre de la ubicación",
+    "locationPlaceholder": "Ej: Cocina, Barra, Terraza",
+    "noLocations": "No hay ubicaciones configuradas todavía",
+    "deleteLocation": "Eliminar",
+    "locationAdded": "✅ Ubicación añadida exitosamente",
+    "locationDeleted": "✅ Ubicación eliminada exitosamente",
     "saveFailed": "❌ Error al guardar configuración",
     "autoDetectedMode": "Modo auto-detectado",
     "sslMode": "SSL (Puerto 465)",
@@ -141,5 +152,89 @@
     "confirmDelete": "¿Estás seguro de que deseas eliminar este registro?",
     "noDataAvailable": "No hay datos disponibles",
     "loadingData": "Cargando datos..."
+  },
+  "schedule": {
+    "title": "Planificación de Turnos",
+    "weekOf": "Semana del",
+    "employee": "Empleado",
+    "unassigned": "Sin asignar",
+    "conflicts": "conflictos",
+    "hasConflict": "Con conflicto",
+    "noSchedule": "No hay horario para esta semana",
+    "createSchedulePrompt": "Crea un nuevo horario para comenzar a planificar turnos.",
+    "createSchedule": "Crear Horario",
+    "copyWeek": "Copiar Semana",
+    "print": "Imprimir Horario",
+    "publish": "Publicar",
+    "unpublish": "Despublicar",
+    "lock": "Bloquear",
+    "unlock": "Desbloquear",
+    "resolveConflictsFirst": "Resuelve los conflictos antes de publicar",
+    "unlockReasonPrompt": "Ingresa el motivo para desbloquear el horario:",
+    "status": {
+      "draft": "Borrador",
+      "published": "Publicado",
+      "locked": "Bloqueado"
+    },
+    "createShift": "Crear Turno",
+    "editShift": "Editar Turno",
+    "confirmDeleteShift": "¿Estás seguro de que deseas eliminar este turno?",
+    "conflictsDetected": "Conflictos detectados",
+    "date": "Fecha",
+    "startTime": "Hora de inicio",
+    "endTime": "Hora de fin",
+    "breakMinutes": "Descanso (min)",
+    "role": "Rol",
+    "selectRole": "Seleccionar rol",
+    "assignEmployee": "Asignar empleado",
+    "location": "Ubicación",
+    "allLocations": "Todas las ubicaciones",
+    "locationPlaceholder": "Ej: Cocina, Barra, Terraza",
+    "color": "Color",
+    "notes": "Notas",
+    "notesPlaceholder": "Notas adicionales sobre el turno...",
+    "tapToAdd": "Toca para agregar turno",
+    "loadError": "Error al cargar el horario",
+    "createError": "Error al crear el horario",
+    "publishError": "Error al publicar el horario",
+    "unpublishError": "Error al despublicar el horario",
+    "lockError": "Error al bloquear el horario",
+    "unlockError": "Error al desbloquear el horario",
+    "copyError": "Error al copiar el horario",
+    "copyShift": "Copiar Turno",
+    "cutShift": "Cortar Turno",
+    "pasteShift": "Pegar Turno",
+    "deleteShift": "Eliminar Turno",
+    "shiftCopied": "Turno copiado al portapapeles",
+    "shiftCut": "Turno cortado al portapapeles",
+    "shiftPasted": "Turno pegado exitosamente",
+    "shiftDeleted": "Turno eliminado exitosamente",
+    "pasteError": "Error al pegar turno",
+    "deleteError": "Error al eliminar turno",
+    "pasteHere": "Clic para pegar",
+    "requestSwap": "Solicitar Cambio",
+    "swapWith": "Cambiar con",
+    "selectEmployee": "Seleccionar empleado",
+    "swapReason": "Motivo del cambio (opcional)",
+    "swapReasonPlaceholder": "¿Por qué necesitas cambiar este turno?",
+    "targetShift": "Turno objetivo (opcional)",
+    "createSwapRequest": "Crear Solicitud de Cambio",
+    "swapRequests": "Solicitudes de Cambio",
+    "pending": "Pendiente",
+    "approved": "Aprobado",
+    "rejected": "Rechazado",
+    "cancelled": "Cancelado",
+    "approveSwap": "Aprobar Cambio",
+    "rejectSwap": "Rechazar Cambio",
+    "cancelSwap": "Cancelar Solicitud",
+    "rejectionReason": "Motivo del rechazo",
+    "swapRequestCreated": "Solicitud de cambio creada exitosamente",
+    "swapRequestApproved": "Solicitud de cambio aprobada",
+    "swapRequestRejected": "Solicitud de cambio rechazada",
+    "swapRequestCancelled": "Solicitud de cambio cancelada",
+    "swapError": "Error al procesar solicitud de cambio",
+    "shiftDetails": "Detalles del Turno",
+    "time": "Hora",
+    "noEmployeesAvailable": "No hay empleados disponibles para intercambio"
   }
 }
