feat(scheduling): Add WhatsApp share + mobile print optimizations
- Add WhatsApp share button to schedule header
- Capture schedule as high-quality image using html2canvas
- Support Web Share API on mobile for native sharing
- Fallback to WhatsApp Web link on desktop with image download
- Add mobile-specific print styles for better mobile printing
- Reduce font sizes and padding on mobile print view
- Add WhatsApp green button styling
- Add i18n translations (EN/ES) for share features

Technical:
- Install html2canvas@^1.4.1 for schedule screenshot
- Green WhatsApp button (#25D366) next to Print button
- Mobile: Native share sheet with image
- Desktop: Auto-download PNG + open WhatsApp Web
- Print: Mobile-optimized media queries (smaller fonts, compact layout)

--- a/apps/web/src/locales/en/translation.json
+++ b/apps/web/src/locales/en/translation.json
@@ -235,6 +235,13 @@
     "swapError": "Error processing swap request",
     "shiftDetails": "Shift Details",
     "time": "Time",
-    "noEmployeesAvailable": "No employees available for swap"
+    "noEmployeesAvailable": "No employees available for swap",
+    "shareWhatsApp": "Share on WhatsApp",
+    "shareTitle": "Work Schedule",
+    "shareText": "Work schedule for week",
+    "capturingImage": "Capturing schedule...",
+    "shareSuccess": "Shared successfully",
+    "shareError": "Error sharing schedule",
+    "imageDownloaded": "Schedule image downloaded. Check WhatsApp Web to share."
   }
 }
