feat(scheduling): Always capture desktop view + add date to WhatsApp message
**Issue 1: Mobile was capturing mobile view instead of desktop grid**
SOLUTION:
- Force capture of .schedule-calendar.desktop even when on mobile
- Temporarily show desktop view off-screen during capture
- Restore original display state after capture
- Result: WhatsApp shares always show full desktop grid layout

**Issue 2: WhatsApp message missing week date**
SOLUTION:
- Add week range to share message (both mobile and desktop)
- Format respects current language (Spanish: 'Horario de trabajo para la semana 3-9 feb 2026')
- Format respects current language (English: 'Work schedule for week 3-9 Feb 2026')
- Week range dynamically updates based on currentWeekStart state
- Uses i18n locale for proper date formatting

**Technical changes:**
- Added locale translation keys: schedule.locale (en-US / es-ES)
- formatWeekRange() now uses t('schedule.locale') for proper formatting
- Share message includes formatted week range on both mobile and desktop
- Desktop view temporarily visible off-screen for html2canvas capture

Example messages:
EN: 'Work schedule for week 10-16 Feb 2026'
ES: 'Horario de trabajo para la semana 10-16 feb 2026'

--- a/apps/web/src/locales/en/translation.json
+++ b/apps/web/src/locales/en/translation.json
@@ -242,6 +242,7 @@
     "capturingImage": "Capturing schedule...",
     "shareSuccess": "Shared successfully",
     "shareError": "Error sharing schedule",
-    "imageDownloaded": "Schedule image downloaded. Check WhatsApp Web to share."
+    "imageDownloaded": "Schedule image downloaded. Check WhatsApp Web to share.",
+    "locale": "en-US"
   }
 }
