feat: add broadcast swap, email notifications, and OneSignal push notifications
- Add broadcast swap to all employees with same role
- Add email notifications for shift swap requests (ES/EN)
- Add OneSignal push notification integration
- Add employee names in shift cards on mobile
- Fix print layout for mobile schedules
- Make swap button always visible
- Add dynamic employee column widths
- Add OneSignal player ID to user schema
- Add user routes for OneSignal player ID management

All features fully implemented and tested locally.

--- a/apps/web/src/locales/en/translation.json
+++ b/apps/web/src/locales/en/translation.json
@@ -233,6 +233,12 @@
     "swapRequestRejected": "Swap request rejected",
     "swapRequestCancelled": "Swap request cancelled",
     "swapError": "Error processing swap request",
+    "swapRequestType": "Request type",
+    "swapSpecificEmployee": "Request specific employee",
+    "swapBroadcastToRole": "Broadcast to all with same role",
+    "swapBroadcastHelpText": "This will send a swap request to all active employees with the role:",
+    "swapBroadcastNoRole": "Cannot broadcast: this shift has no role assigned",
+    "swapBroadcastCreated": "Broadcast swap requests sent to all employees with same role",
     "shiftDetails": "Shift Details",
     "time": "Time",
     "noEmployeesAvailable": "No employees available for swap",
