--- a/apps/web/src/locales/es/translation.json
+++ b/apps/web/src/locales/es/translation.json
@@ -233,6 +233,12 @@
     "swapRequestRejected": "Solicitud de cambio rechazada",
     "swapRequestCancelled": "Solicitud de cambio cancelada",
     "swapError": "Error al procesar solicitud de cambio",
+    "swapRequestType": "Tipo de solicitud",
+    "swapSpecificEmployee": "Solicitar a empleado específico",
+    "swapBroadcastToRole": "Difundir a todos con el mismo rol",
+    "swapBroadcastHelpText": "Esto enviará una solicitud de cambio a todos los empleados activos con el rol:",
+    "swapBroadcastNoRole": "No se puede difundir: este turno no tiene rol asignado",
+    "swapBroadcastCreated": "Solicitudes de cambio enviadas a todos los empleados con el mismo rol",
     "shiftDetails": "Detalles del Turno",
     "time": "Hora",
     "noEmployeesAvailable": "No hay empleados disponibles para intercambio",
