MAJOR: Professional PDF generation - Replace browser print with high-quality PDF download

--- a/apps/web/src/locales/en/translation.json
+++ b/apps/web/src/locales/en/translation.json
@@ -249,6 +249,9 @@
     "shareSuccess": "Shared successfully",
     "shareError": "Error sharing schedule",
     "imageDownloaded": "Schedule image downloaded. Check WhatsApp Web to share.",
+    "generatingPDF": "Generating PDF...",
+    "pdfGenerated": "PDF downloaded successfully",
+    "printError": "Error generating PDF",
     "locale": "en-US"
   }
 }
