Feature: Add 'My Shifts Today' widget with unscheduled shift support and translation management tools
- Add MyShiftsToday component with real-time shift status indicators:
  * Upcoming (>30 min), Starting Soon (pulsing), Active (blinking), Completed
  * Clock In/Out buttons with context-aware actions
  * Unscheduled shift support when no shifts scheduled
  * Mobile-responsive design with touch-optimized UI

- Add translation validation script (i18n:validate)
  * Prevents missing translations from reaching production
  * Validates English <-> Spanish key parity
  * CI/CD ready with error exit codes

- Add comprehensive translation strategy documentation
  * Comparison of 6 translation tools (Tolgee, Crowdin, etc.)
  * Recommendation: stick with JSON files (scales to 1000s for $0)
  * VS Code i18n Ally extension recommendation

- Add 8 new translation keys (English + Spanish):
  myShiftsToday, clockInOut, shiftStartingSoon, shiftActive,
  clockInNow, clockOut, noShiftsToday, startUnscheduledShift

- Version bump: 4.1.0-20260203-0044

--- a/apps/web/src/locales/en/translation.json
+++ b/apps/web/src/locales/en/translation.json
@@ -252,6 +252,14 @@
     "generatingPDF": "Generating PDF...",
     "pdfGenerated": "PDF downloaded successfully",
     "printError": "Error generating PDF",
-    "locale": "en-US"
+    "locale": "en-US",
+    "myShiftsToday": "My Shifts Today",
+    "clockInOut": "Clock In/Out",
+    "shiftStartingSoon": "Shift starting soon!",
+    "shiftActive": "Active Now",
+    "clockInNow": "Clock In Now",
+    "clockOut": "Clock Out",
+    "noShiftsToday": "You have no scheduled shifts today",
+    "startUnscheduledShift": "Start Unscheduled Shift"
   }
 }
