Feature: Complete Time Tracking module implementation
MAJOR RELEASE: v5.0.0

This is a comprehensive Time Tracking module implementation with full
backend API, frontend UI, and integration with existing scheduling.

Backend (API):
- Add shiftId and entryType fields to TimeEntry schema
- Create database migration for time_entries table updates
- Implement timeEntry.service.ts with complete business logic:
  * Clock in/out with event-only geolocation (AEPD-compliant)
  * Automatic break deduction based on work hours
  * Overtime calculation (>8h standard day)
  * Duplicate prevention (no double clock-ins)
  * Scheduled vs unscheduled shift support
  * Entry type determination
- Implement timeEntry.routes.ts with 5 REST endpoints:
  * POST /api/v1/time-entries/clock-in
  * POST /api/v1/time-entries/clock-out
  * GET /api/v1/time-entries/current
  * GET /api/v1/time-entries (history with pagination)
  * GET /api/v1/time-entries/stats
- Add RBAC enforcement (employee=own, manager=team, admin=all)
- Add audit logging for all clock in/out operations
- Add comprehensive Jest tests for routes

Frontend (Web):
- Create TimeEntriesPage with full-featured time tracking UI
- Create ClockButton component (green/red gradient, loading states)
- Create CurrentTimer component (real-time elapsed timer)
- Create TimeEntryCard component (history view with stats)
- Implement useGeolocation hook (browser API + caching)
- Implement timeEntryService.ts API client with offline PWA support
- Add TimeEntry TypeScript types
- Add 40+ translation keys (English + Spanish):
  timeTracking namespace with clock-in/out, stats, geolocation strings
- Mobile-first responsive design matching existing patterns
- Real-time timer updates every second when clocked in
- PWA offline action queue for sync when back online

Integration:
- Update MyShiftsToday widget to call Time Tracking API directly:
  * Clock In button calls timeEntryService.clockIn()
  * Clock Out button calls timeEntryService.clockOut()
  * 

--- a/apps/web/src/locales/en/translation.json
+++ b/apps/web/src/locales/en/translation.json
@@ -261,5 +261,47 @@
     "clockOut": "Clock Out",
     "noShiftsToday": "You have no scheduled shifts today",
     "startUnscheduledShift": "Start Unscheduled Shift"
+  },
+  "timeTracking": {
+    "clockIn": "Clock In",
+    "clockOut": "Clock Out",
+    "clockingIn": "Clocking in...",
+    "clockingOut": "Clocking out...",
+    "gettingLocation": "Getting location...",
+    "clockedIn": "Clocked In",
+    "clockedOut": "Clocked Out",
+    "clockedInSuccess": "Successfully clocked in",
+    "clockedOutSuccess": "Successfully clocked out",
+    "startedAt": "Started at",
+    "hours": "hours",
+    "tapToClockIn": "Tap the button to start your shift",
+    "todayStats": "Today's Summary",
+    "hoursWorked": "Hours Worked",
+    "breaks": "Breaks",
+    "thisWeek": "This Week",
+    "recentEntries": "Recent Entries",
+    "noEntries": "No time entries yet",
+    "today": "Today",
+    "yesterday": "Yesterday",
+    "inProgress": "In Progress",
+    "total": "Total",
+    "break": "Break",
+    "overtime": "Overtime",
+    "scheduled": "Scheduled",
+    "unscheduled": "Unscheduled",
+    "scheduledShift": "Scheduled Shift",
+    "unscheduledShift": "Unscheduled Shift",
+    "locationRecorded": "Location recorded",
+    "geoRecorded": "GPS recorded",
+    "locationEnabled": "Location enabled",
+    "locationBlocked": "Location access blocked",
+    "locationBlockedDesc": "Please enable location access in your browser settings for accurate time tracking.",
+    "locationPermissionDenied": "Location permission denied. You can still clock in without GPS.",
+    "geolocationRequired": "Location is required by your company for time tracking.",
+    "alreadyClockedIn": "You are already clocked in. Please clock out first.",
+    "notClockedIn": "You are not currently clocked in.",
+    "clockInError": "Failed to clock in. Please try again.",
+    "clockOutError": "Failed to clock out. Please try again.",
+    "loadError": "Failed to load time tracking data."
   }
 }
