--- a/apps/web/src/locales/es/translation.json
+++ b/apps/web/src/locales/es/translation.json
@@ -261,5 +261,47 @@
     "clockOut": "Fichar Salida",
     "noShiftsToday": "No tienes turnos programados hoy",
     "startUnscheduledShift": "Iniciar Turno No Programado"
+  },
+  "timeTracking": {
+    "clockIn": "Fichar Entrada",
+    "clockOut": "Fichar Salida",
+    "clockingIn": "Fichando entrada...",
+    "clockingOut": "Fichando salida...",
+    "gettingLocation": "Obteniendo ubicación...",
+    "clockedIn": "Fichado",
+    "clockedOut": "Salida Fichada",
+    "clockedInSuccess": "Entrada fichada correctamente",
+    "clockedOutSuccess": "Salida fichada correctamente",
+    "startedAt": "Inicio a las",
+    "hours": "horas",
+    "tapToClockIn": "Pulsa el botón para iniciar tu jornada",
+    "todayStats": "Resumen de Hoy",
+    "hoursWorked": "Horas Trabajadas",
+    "breaks": "Descansos",
+    "thisWeek": "Esta Semana",
+    "recentEntries": "Entradas Recientes",
+    "noEntries": "Sin registros de tiempo",
+    "today": "Hoy",
+    "yesterday": "Ayer",
+    "inProgress": "En Curso",
+    "total": "Total",
+    "break": "Descanso",
+    "overtime": "Extra",
+    "scheduled": "Programado",
+    "unscheduled": "No Programado",
+    "scheduledShift": "Turno Programado",
+    "unscheduledShift": "Turno No Programado",
+    "locationRecorded": "Ubicación registrada",
+    "geoRecorded": "GPS registrado",
+    "locationEnabled": "Ubicación activada",
+    "locationBlocked": "Acceso a ubicación bloqueado",
+    "locationBlockedDesc": "Por favor, habilita el acceso a la ubicación en la configuración de tu navegador para un registro preciso.",
+    "locationPermissionDenied": "Permiso de ubicación denegado. Puedes fichar sin GPS.",
+    "geolocationRequired": "Tu empresa requiere la ubicación para el control horario.",
+    "alreadyClockedIn": "Ya tienes una entrada fichada. Debes fichar salida primero.",
+    "notClockedIn": "No tienes ninguna entrada fichada actualmente.",
+    "clockInError": "Error al fichar entrada. Por favor, inténtalo de nuevo.",
+    "clockOutError": "Error al fichar salida. Por favor, inténtalo de nuevo.",
+    "loadError": "Error al cargar los datos de control horario."
   }
 }
