Feature: Break management, location display, and early clock-in warnings
Added three critical features to Time Tracking module:

1. Break Management
   - Backend: Start/end break API endpoints
   - Database: Added break_start column for active break tracking
   - Frontend: Break buttons in CurrentTimer with elapsed time display
   - UI: Amber theme when on break, "ON BREAK" badge

2. Location Display
   - Reverse geocoding using OpenStreetMap Nominatim API
   - Shows human-readable address when clocking in/out
   - Displays "You are at: [address]" for 5 seconds
   - Fallback to coordinates if geocoding fails

3. Early Clock-In Warning
   - Tenant-configurable threshold (default 15 minutes)
   - Warning dialog when clocking in early
   - Allow/block override based on tenant settings
   - Backend validation in clockIn service method

Technical changes:
- Added breakStart field to TimeEntry model
- Added earlyClockInWarning to tenant settings
- Created EarlyClockInDialog component
- Added reverseGeocode utility function
- Updated translations (EN/ES) for all new features
- Migration: 20260203010000_add_break_start

Version: 5.1.0

--- a/apps/web/src/locales/en/translation.json
+++ b/apps/web/src/locales/en/translation.json
@@ -302,6 +302,18 @@
     "notClockedIn": "You are not currently clocked in.",
     "clockInError": "Failed to clock in. Please try again.",
     "clockOutError": "Failed to clock out. Please try again.",
-    "loadError": "Failed to load time tracking data."
+    "loadError": "Failed to load time tracking data.",
+    "onBreak": "ON BREAK",
+    "startBreak": "Start Break",
+    "endBreak": "End Break",
+    "breakStarted": "Break started",
+    "breakEnded": "Break ended",
+    "startBreakError": "Failed to start break. Please try again.",
+    "endBreakError": "Failed to end break. Please try again.",
+    "yourLocation": "You are at: {{address}}",
+    "earlyClockInTitle": "You are clocking in {{minutes}} minutes early",
+    "earlyClockInMessage": "Your shift starts at {{time}}. You should not clock in early unless authorized.",
+    "clockInAnyway": "Clock In Anyway",
+    "earlyClockInBlocked": "You cannot clock in this early. Please wait until closer to your shift start time."
   }
 }
