UI: Move date/time into clock card and add location selector
Improved Time Entries page UX:

1. Date/Time Display Repositioned
   - Moved from page header into clock-section card
   - Now appears directly above clock button
   - Larger time display (2rem monospace font)
   - Shows: HH:mm:ss + full date
   - Updates every second (existing functionality preserved)

2. Location Dropdown Selector
   - Added location selector above clock button
   - Dropdown with tenant locations
   - Currently hardcoded (Main Office, Warehouse, Retail)
   - Prepared for future integration with clock-in API
   - State management added for selectedLocation

3. Translations
   - Added 'selectLocation' and 'chooseLocation' keys
   - English and Spanish translations

4. Styling
   - Clean, centered layout in clock section
   - Blue accents for location dropdown
   - Hover and focus states for dropdown
   - Mobile-friendly responsive design

Files changed:
- apps/web/src/pages/TimeEntriesPage.tsx
- apps/web/src/pages/TimeEntriesPage.css
- apps/web/src/locales/en/translation.json
- apps/web/src/locales/es/translation.json

Version: 5.1.2

--- a/apps/web/src/locales/en/translation.json
+++ b/apps/web/src/locales/en/translation.json
@@ -314,6 +314,8 @@
     "earlyClockInTitle": "You are clocking in {{minutes}} minutes early",
     "earlyClockInMessage": "Your shift starts at {{time}}. You should not clock in early unless authorized.",
     "clockInAnyway": "Clock In Anyway",
-    "earlyClockInBlocked": "You cannot clock in this early. Please wait until closer to your shift start time."
+    "earlyClockInBlocked": "You cannot clock in this early. Please wait until closer to your shift start time.",
+    "selectLocation": "Location",
+    "chooseLocation": "Choose your location..."
   }
 }
