Feature: Radix UI integration with theming system (v5.3.0)
- Refactored EarlyClockInDialog to use Radix Dialog primitive
- Replaced location dropdown with Radix Select
- Implemented Radix Toast for notifications
- Enhanced LandingPage with Accordion FAQ and Tooltips
- Implemented custom theming system with light/dark mode
- Added ThemeToggle component with system preference detection
- Migrated core components to use CSS custom properties
- Added comprehensive Radix color scales (@radix-ui/colors)
- Translations added for theme settings (EN/ES)

Components refactored:
- Time tracking: Dialog, Select, Toast
- Landing page: Accordion, Tooltip
- Dashboard: Header, Sidebar with theme support

Accessibility improvements:
- Built-in ARIA from Radix primitives
- Keyboard navigation enhanced
- Focus states improved
- Reduced motion support

All existing functionality preserved, zero breaking changes.

--- a/apps/web/src/locales/en/translation.json
+++ b/apps/web/src/locales/en/translation.json
@@ -96,6 +96,10 @@
   },
   "settings": {
     "settings": "Settings",
+    "appearance": "Appearance",
+    "appearanceDescription": "Customize how Torre Tempo looks on your device",
+    "themeMode": "Theme Mode",
+    "themeModeDescription": "Switch between light and dark mode",
     "smtpConfiguration": "SMTP Configuration",
     "smtpDescription": "Configure SMTP server to send emails (welcome, notifications, etc.)",
     "smtpHost": "SMTP Server",
