--- a/apps/web/src/locales/en/translation.json
+++ b/apps/web/src/locales/en/translation.json
@@ -19,7 +19,10 @@
     "export": "Export",
     "import": "Import",
     "optional": "optional",
-    "submitting": "Submitting..."
+    "submitting": "Submitting...",
+    "platformAdmin": "Platform Admin - Tenant Selection Required",
+    "tenantSelectionRequired": "As a platform administrator, you need to select a specific tenant to view their data.",
+    "tenantSelectorComingSoon": "Tenant selector coming soon..."
   },
   "auth": {
     "login": "Login",
